# wsql

./: .gitignore  Cargo.toml  README.md
benches/: q6_bench.rs
benches/queries/: tpch_q6.json
src/: engine.rs  executor.rs  gpu.rs  jit.rs  lib.rs  main.rs  shader.wgsl  sub.rs
tests/: engine_test.rs  integration_test.rs
tests/fixtures/: f32_logic.json  simple_add.json  streaming_aggregate.json  sum_project.json
