[package]
name = "wsql"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu = "28.0.0"
pollster = "0.4.0"

parquet = { version = "57", features = ["arrow"] }
opendal = { version = "0.55.0", features = ["services-fs"] }
arrow = "57"

tokio = { version = "1", features = ["full"] }
bytemuck = { version = "1", features = ["derive"] }
anyhow = "1"

