[package]
name = "wsql"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu = "28.0.0"
pollster = "0.4.0"

parquet = { version = "57", features = ["arrow"] }
opendal = { version = "0.55.0", features = ["services-fs"] }
arrow = "57"

substrait = { version = "0.62", features = ["serde"] }
prost = "0.14.3"

tokio = { version = "1", features = ["full"] }
bytemuck = { version = "1", features = ["derive"] }

serde_json = "1.0.149"

anyhow = "1"

[dev-dependencies]


[[bench]]
name = "q6_bench"
harness = false